--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,42 +1,77 @@
-html,
-body {
-    display: block;
-    background-color: black;
+* {
+    padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
-header {
-    padding: 5px;
-    margin: 5px;
+body {
+    background: #eee;
+    background-color: rgb(0, 0, 0);
 }
 
-nav {
-    display: flex;
-    flex: auto;
-    justify-content: right;
-    padding: 10px;
-    margin: 20px;
+video {
+    height: 100vh;
+    justify-items: center;
+}
+
+.main {
+    height: 100vh;
+    background: black;
+    text-align: center;
+}
+
+.nav {
+    width: 100%;
+    font-size: 20px;
+    background: black;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    text-align: center;
+    left: 0;
+    box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, .2);
 }
 
-a {
-    font-size: 20px;
-    text-transform: uppercase;
-    margin: 20px;
+.top-nav {
+    position: fixed;
+    top: 0;
 }
 
-a.primary {
-    color: white;
-    font-size: 25px;
+.bottom-nav {
+    position: absolute;
+    bottom: 0;
 }
 
-a.primary:hover {
-    color: white;
-    font-size: 25px;
+.nav ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 20px;
 }
 
-a.primary:active {
-    color: rgba(116, 116, 116, 0.788);
+.nav ul li .nav-link {
+    text-decoration: none;
+    padding: 20px;
+    color: #ccc;
+}
+
+.nav ul li .nav-link:hover {
+    background: #333;
+    color: #efefef
+}
+
+.container {
+    width: 70%;
+    margin: 50px auto;
+    padding: 10px;
+}
+
+.container .box {
+    width: 1100px;
+    height: 400px;
+    background: rgba(56, 56, 56, 0.795);
+    display: center;
+    padding: 50px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px -3px rgba(0, 0, 0, .1);
+    font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
 }
