add more to page

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,11 +1,10 @@
 * {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
 }
 
 body {
-    background: #eee;
+    margin: 0;
+    padding: 0;
     background-color: rgb(0, 0, 0);
 }
 
@@ -22,10 +21,8 @@ video {
 
 .nav {
     width: 100%;
-    font-size: 20px;
-    background: black;
-    font-family: 'Courier New', Courier, monospace;
     text-align: center;
+    background: black;
     left: 0;
     box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, .2);
 }
@@ -40,38 +37,95 @@ video {
     bottom: 0;
 }
 
-.nav ul li {
-    list-style-type: none;
-    display: inline-block;
-    padding: 20px;
-}
-
-.nav ul li .nav-link {
-    text-decoration: none;
-    padding: 20px;
-    color: #ccc;
-}
-
-.nav ul li .nav-link:hover {
-    background: #333;
-    color: #efefef
-}
-
-.container {
+div .box {
     width: 70%;
     margin: 50px auto;
     padding: 10px;
 }
 
-.container .box {
-    width: 1100px;
-    height: 400px;
-    background: rgba(56, 56, 56, 0.795);
+.box {
+    width: 1500px;
+    height: 500px;
+    background: rgba(173, 172, 172, 0.473);
     display: center;
     padding: 50px;
     margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 0 0 10px -3px rgba(0, 0, 0, .1);
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 30px;
+    box-shadow: 0 0 10px -3px rgba(0, 0, 0, 0.205);
+}
+
+.brand-title {
+    font-size: 1.5rem;
+    margin: .5rem;
+}
+
+.navbar-links {
+    height: 100%;
+}
+
+.navbar-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li {
+    list-style: none;
+}
+
+.navbar-links li a {
+    display: block;
+    text-decoration: uppercase;
+    text-align: center;
+    color: white;
+    padding: 1rem;
+}
+
+.navbar-links li:hover {
+    background-color: #555;
+}
+
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .toggle-button {
+        display: flex;
+    }
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+    .navbar-links ul li {
+        text-align: center;
+    }
+    .navbar-links ul li a {
+        padding: .5rem 1rem;
+    }
+    .navbar-links.active {
+        display: flex;
+    }
 }
