--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -8,9 +8,46 @@
 }
 
 
+@font-face {
+    font-family: "Alfa";
+    src: url("../Fonts/AlfaSlabOne-Regular.ttf");
+}
+
+* {
+    box-sizing: border-box;
+    font-family: "Alfa"
+}
 
 html, body {
-    margin: 0;
+    padding: 0;
+    background-color: rgb(0, 0, 0);
+}
+
+.nav {
+    width: 100%;
+    text-align: center;
+    background: white;
+    left: 0;
+    box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, .2);
+}
+
+div .box {
+    width: 70%;
+    margin: 50px auto;
+    padding: 10px;
+}
+
+.box {
+    width: 1500px;
+    height: 500px;
+    background: rgba(173, 172, 172, 0.473);
+    display: center;
+    padding: 50px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px -3px rgba(0, 0, 0, 0.205);
+    font-size: 30px;
+    text-align: left;
 }
 
 .card {
@@ -25,7 +62,7 @@ html, body {
 .jumbotron {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: calc(100vh + 5rem);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -33,7 +70,81 @@ html, body {
     opacity: .8;
 }
 
+.navbar-links ul {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-links li {
+    text-align: center;
+    list-style: none;
+}
+
+.navbar-links li a {
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    list-style-type: none;
+    display: inline-block;
+    padding: 20px;
+}
+
+.navbar-links li:hover {
+    background-color: #555;
+    background: #333;
+    color: #efefef
+}
+
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
 #title-text {
     margin: 3rem;
     color: white;
+}
+
+
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .toggle-button {
+        display: flex;
+    }
+    .navbar-links {
+        display: none;
+        width: 100%;
+    }
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+    .navbar-links ul li {
+        text-align: center;
+    }
+    .navbar-links ul li a {
+        padding: .5rem 1rem;
+    }
+    .navbar-links.active {
+        display: flex;
+    }
 }
