--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -1,25 +1,30 @@
-@font-face {
-    font-family: "Alfa";
-    src: url("../Fonts/AlfaSlabOne-Regular.ttf");
-}
-
 * {
-    font-family: "Alfa"
+    font-family: 'DM Serif Display', serif;
 }
 
+.header {
+    background-color: black;
+    height: 75px;
+    display: flex;
+    text-align: center;
+}
 
+#img {
+    height: 5px;
+}
 
-html, body {
+html,
+body {
     margin: 0;
 }
 
 .card {
-    background: rgba( 0, 0, 0, 0.55 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 5.5px );
-    -webkit-backdrop-filter: blur( 5.5px );
+    background: rgba( 0, 0, 0, 0.55);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+    backdrop-filter: blur( 5.5px);
+    -webkit-backdrop-filter: blur( 5.5px);
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid rgba( 255, 255, 255, 0.18);
 }
 
 .jumbotron {
@@ -36,4 +41,22 @@ html, body {
 #title-text {
     margin: 3rem;
     color: white;
+}
+
+#submit {
+    float: right;
+    margin-top: 10px;
+    padding: 10px;
+}
+
+#logo {
+    width: 5%;
+    display: inline;
+}
+
+h1 {
+    display: inline;
+    width: 90%;
+    color: white;
+    margin-top: 10px;
 }
