--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -7,6 +7,9 @@ html, body {
     background-color: rgb(0, 0, 0);
 }
 
+a {
+    margin: 0;
+}
 .title-text {
     margin: 3rem;
     color: white;
@@ -59,7 +62,7 @@ html, body {
 }
 
 #submit {
-    float: right;
+    width: 10rem;
     margin-top: 10px;
     padding: 10px;
 }
@@ -86,18 +89,4 @@ html, body {
     height: 18rem;
     width: 18rem;
     border-radius: 50%;
-}
-
-/* Event Card */
-.date {
-    border-right: 3px solid;
-    padding-right: 1rem;
-}
-
-.venue {
-    padding-left: 1rem;
-}
-
-.tickets-button {
-    margin-left: 1rem;
 }
