--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -2,7 +2,8 @@
     font-family: 'DM Serif Display', serif;
 }
 
-html, body {
+html,
+body {
     padding: 0;
     background-color: rgb(0, 0, 0);
 }
@@ -10,12 +11,15 @@ html, body {
 a {
     margin: 0;
 }
+
 .title-text {
     margin: 3rem;
     color: white;
 }
 
+
 /* Project Header */
+
 #logo {
     width: 5%;
     display: inline;
@@ -35,7 +39,9 @@ a {
     text-align: center;
 }
 
+
 /* Entire Background */
+
 .jumbotron {
     margin: 0;
     padding: 0;
@@ -47,7 +53,9 @@ a {
     opacity: .8;
 }
 
+
 /* Search Card */
+
 .card {
     background: rgba( 0, 0, 0, 0.55);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
@@ -67,7 +75,9 @@ a {
     padding: 10px;
 }
 
+
 /* Artist Information */
+
 .musician-information {
     display: none;
 }
@@ -89,4 +99,8 @@ a {
     height: 18rem;
     width: 18rem;
     border-radius: 50%;
+}
+
+.imageCenter {
+    margin-left: 30%;
 }
